portfolio with tailwind configuration

--- a/projects/shell/src/app/app.component.html
+++ b/projects/shell/src/app/app.component.html
@@ -1,5 +1,11 @@
-<ul>
-  <li><a routerLink="/">Shell</a></li>
-  <li><a routerLink="/profile">Profile</a></li>
-</ul>
+<nav class="w-full py-3 bg-blue-500">
+<div class="max-w-7xl mx-auto flex justify-between">
+  <h3 class="font-bold text-lg text-white">Pranith's Portfolio</h3>
+  <ul class="flex gap-2 items-center font-medium text-blue-100">
+    <li><a class="px-2 hover:text-white" routerLink="/">Home</a></li>
+<li><a class="px-2 hover:text-white" routerLink="/profile">Profile</a></li>
+  </ul>
+</div>
+</nav>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
