--- a/projects/shell/src/app/pages/home/home.component.html
+++ b/projects/shell/src/app/pages/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<div class="w-full flex justify-center items-center h-[300px] border-2 border-dashed border-gray-300">
+Home Application
+</div>
